--- a/Ihub/index.html
+++ b/Ihub/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to BMW I Hub Assistant</h1>
+        <h1>Welcome to BMW I Hub Assistant (Updated JS SCRIPT)</h1>
     </header>
     <div class="content">
         <p>Chat with our virtual assistant for any inquiries or support.</p>
