--- a/Ihub-Preconfigured/index.html
+++ b/Ihub-Preconfigured/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website</h1>
+        <h1>Welcome to Our Website UPDATED ORI IHUB PRE CONFIGURED</h1>
         <p>This site features an integrated chatbot to assist you!</p>
     </div>
 
