--- a/Ihub-Preconfigured/index.html
+++ b/Ihub-Preconfigured/index.html
@@ -32,12 +32,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website UPDATED ORI IHUB PRE CONFIGURED</h1>
+        <h1>Welcome to Our Website (BMW Duplicate Bot on Razi's Workspace)</h1>
         <p>This site features an integrated chatbot to assist you!</p>
     </div>
 
     <!-- Botpress Chat Integration -->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-    <script src="https://mediafiles.botpress.cloud/ec56de9c-27c0-43df-af20-61357562d911/webchat/config.js" defer></script>
+    <script src="https://mediafiles.botpress.cloud/f8b07cd3-ec45-46e4-93fb-b7057c56b1ae/webchat/config.js" defer></script>
 </body>
 </html>
