--- a/Allianz/index.html
+++ b/Allianz/index.html
@@ -46,7 +46,7 @@
         <h1>Welcome to Allianz Agent Bot Demo</h1>
     </header>
     <div class="content">
-        <p>Presented to you by AI&You</p>
+        <p>Presented to you by Leverate</p>
     </div>
     <div class="bmw-virtual-assistant">
         Chat with Allianz Agent Bot
