--- a/Fando/index.html
+++ b/Fando/index.html
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web for Bot Testing</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fando Bot</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        header {
+            background-color: #2563eb;
+            color: white;
+            padding: 10px 0;
+            width: 100%;
+            text-align: center;
+        }
+        .content {
+            text-align: center;
+            margin: 20px;
+        }
+        .bmw-virtual-assistant {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #2563eb;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 50px;
+            cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>My Website</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="hero">
-      <h2>Welcome to my page!</h2>
-      <p>This is for Bot Testing. Don't mind the other features</p>
-      <button onclick="changeButtonText()">Learn More</button>
-    </section>
-    <section id="features">
-      <h3>Key Features</h3>
-      <ul>
-        <li>Feature 1</li>
-        <li>Feature 2</li>
-        <li>Feature 3</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    &copy; 2024 My Website
-  </footer>
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-  <script src="https://mediafiles.botpress.cloud/17fee413-dcf3-4d79-85dc-978c6a9af830/webchat/config.js" defer></script>
+    <header>
+        <h1>Welcome to Fando Bot Demo</h1>
+    </header>
+    <div class="content">
+        <p>Presented to you by AI&You</p>
+    </div>
+    <div class="bmw-virtual-assistant">
+        Chat with Fando Bot
+    </div>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/17fee413-dcf3-4d79-85dc-978c6a9af830/webchat/config.js" defer></script>
 </body>
 </html>
