--- a/financialbot/accountant/index.html
+++ b/financialbot/accountant/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex The Accountant and Bookkeper</title>
+    <title>Prism The Accountant and Bookkeper</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,13 +43,13 @@
 </head>
 <body>
     <header>
-        <h1>Hi I'm Alex! An Accountant and Bookkeping Chatbot by AI&You!</h1>
+        <h1>Hi I'm Prism! An Accountant and Bookkeping Chatbot by AI&You!</h1>
     </header>
     <div class="content">
         <p>Presented to you by AI&You</p>
     </div>
     <div class="bmw-virtual-assistant">
-        Alex The Accountant and Bookkeper
+        Prism The Accountant and Bookkeper
     </div>
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://mediafiles.botpress.cloud/8b69919b-b336-4c15-b91d-b6007274a583/webchat/config.js" defer></script>
