--- a/kawanlama/assistantai/index.html
+++ b/kawanlama/assistantai/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prism The Accountant and Bookkeper</title>
+    <title>AI Assistant</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,13 +43,13 @@
 </head>
 <body>
     <header>
-        <h1>Hi I'm Prism! An Accountant and Bookkeping Chatbot by AI&You!</h1>
+        <h1>Hi I'm an AI assistant by AI&You!</h1>
     </header>
     <div class="content">
         <p>Presented to you by AI&You</p>
     </div>
     <div class="bmw-virtual-assistant">
-        Prism The Accountant and Bookkeper
+        The AI Assistant
     </div>
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
     <script src="https://mediafiles.botpress.cloud/ead7962c-c073-41f3-8de7-16f4e2bcd1a3/webchat/config.js" defer></script>
