--- a/eiger/index.html
+++ b/eiger/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eiger Bot</title>
+    <title>Eiger Outdoor Companion</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,13 +43,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Eiger Bot Demo</h1>
+        <h1>Eiger Outdoor Companion Demo</h1>
     </header>
     <div class="content">
         <p>Presented to you by AI&You</p>
     </div>
     <div class="bmw-virtual-assistant">
-        Chat with Eiger Bot
+        Chat with Eiger Outdoor Companion
     </div>
     <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
     <script src="https://files.bpcontent.cloud/2025/01/07/06/20250107065454-HHXCFMGS.js"></script>
